// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the component renders correctly should match the snapshot for the fail input 1`] = `
[
  <input
    className="form-control is-invalid"
    data-testid="input-element"
    disabled={false}
    id="test3"
    type="text"
  />,
  <div
    className="invalid-feedback"
    data-testid="feedback-element"
  >
    invalid field
  </div>,
]
`;

exports[`the component renders correctly should match the snapshot for the neutral input 1`] = `
[
  <input
    className="form-control "
    data-testid="input-element"
    disabled={false}
    id="test1"
    type="text"
  />,
  <div
    className="invalid-feedback"
    data-testid="feedback-element"
  />,
]
`;

exports[`the component renders correctly should match the snapshot for the success input 1`] = `
[
  <input
    className="form-control is-valid"
    data-testid="input-element"
    disabled={false}
    id="test2"
    type="text"
  />,
  <div
    className="valid-feedback"
    data-testid="feedback-element"
  >
    valid field
  </div>,
]
`;
